--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2 class="text-center pt-5 mt-5" id="aboutTitle">About me</h2>
         <div class="row container mx-auto">
           <div id="left" class="col-md-6 d-flex flex-column justify-content-around align-items-center">
-            <img src="../img/photo1.jpeg" alt="" class="photo">
+            <img src="../img/photo1.jpeg" alt="" class="photo mb-3">
             <div>
               <p>
                 I'm a <span class="name">UX/UI Designer </span>and <span class="name">Front End Developer</span> from Israel.
